# Dippy

./: flake.nix  pyproject.toml
.claude/skills/verify-counts/: SKILL.md
src/dippy/: __init__.py
